--- a/src/contacts.html
+++ b/src/contacts.html
@@ -24,126 +24,17 @@
 
         <div class="contacts-block container">
             <div class="contacts-block-cont">
-                <div class="contacts-main">
-                    <div class="contacts-main-tools">
 
-                        <div class="main-tools-item">
-                            <p class="main-tools-title">Телефоны:</p>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img" src="@img/icons/icons.svg#call" alt="call"/>
-                                <span class="main-tools-text">+7 980 375 22 54</span>
-                            </div>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img" src="@img/icons/icons.svg#call" alt="call"/>
-                                <span class="main-tools-text">+7 910 360 63 92</span>
-                            </div>
-                        </div>
+                @@include('html/contacts/contacts-first-screen.html',{})
 
-                        <div class="main-tools-item">
-                            <p class="main-tools-title">E-mail:</p>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img" src="@img/icons/icons.svg#email" alt="email"/>
-                                <span class="main-tools-text">info@viatekmedia</span>
-                            </div>
+                @@include('html/contacts/contacts-second-screen.html',{})
 
-                            <p class="main-tools-title">Режим работы:</p>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img-calendar" src="@img/icons/icons.svg#calendar" alt="calendar"/>
-                                <div class="main-tools-box">
-                                    <p class="main-tools-text-mode">Пн-Пт 9:00 — 17:00</p>
-                                    <div class="main-tools-text-block">
-                                        <p class="main-tools-text-mode">Сб-Вс</p>
-                                        <span class="main-tools-span">Выходной</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                @@include('html/contacts/contacts-third-screen.html',{})
 
-                        <div class="main-tools-item">
-                            <p class="main-tools-title">Мессенджеры:</p>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img" src="@img/icons/icons.svg#telegram-color" alt="telegram"/>
-                                <span class="main-tools-text">+7 910 360 63 92</span>
-                            </div>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img" src="@img/icons/icons.svg#whatsup-color" alt="whatsup"/>
-                                <span class="main-tools-text">+7 910 360 63 92</span>
-                            </div>
-                            <div class="main-tools-info">
-                                <img class="main-tools-img" src="@img/icons/icons.svg#viber-color" alt="viber"/>
-                                <span class="main-tools-text">+7 910 360 63 92</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="contacts-requisites">
-                    <button class="page-blueBtn">Реквизиты</button>
-                    <span class="contacts-requisites-text">Скачайте реквизиты Общества с Ограниченной Ответственностью "ВиатекМедиа".</span>
-                </div>
-
-                <div class="contacts-address">
-                    <div class="contacts-address-item">
-                        <p class="address-item-title">Юридический адрес:</p>
-                        <p class="address-item-text">309516, Россия, Белгородская обл., г. Старый Оскол, пр-т Алексея Укарова, д. Д. 11, офис/помещ. 21</p>
-                    </div>
-                    <div class="contacts-address-item">
-                        <p class="address-item-title">Почтовый адрес:</p>
-                        <p class="address-item-text">309516, Россия, Белгородская обл., г. Старый Оскол, м-н Макаренко 38, а/я 819</p>
-                    </div>
-                </div>
             </div>
         </div>
 
-        <div class="contacts-block-form desktop">
-            <div class="contacts-form">
-                <p class="contacts-form-text">Есть что сказать или появились вопросы?</p>
-                <p class="contacts-form-title">Пишите нам!</p>
-
-                <div class="contacts-form-form">
-                    <div class="contacts-form-block">
-                        <label class="contacts-form-label">
-                            Ваше имя
-                            <input class="contacts-form-input" type="text"/>
-                        </label>
-                    </div>
-                    <div class="contacts-form-block">
-                        <label class="contacts-form-label">
-                            Как вам ответить?
-                            <input class="contacts-form-input" type="" placeholder="Телефонный звонок"/>
-                        </label>
-                    </div>
-                    <div class="contacts-form-block">
-                        <label class="contacts-form-label">
-                            Контакт
-                            <input class="contacts-form-input" type="text"/>
-                        </label>
-                    </div>
-                    <div class="contacts-form-block">
-                        <label class="contacts-form-label">
-                            Сообщение
-                            <input class="contacts-form-inputMessage" type="text"/>
-                        </label>
-                    </div>
-
-                    <div class="contacts-form-data">
-                        <input class="contacts-form-checkbox" type="checkbox"/>
-                        <!--                            <span class="contacts-form-checkbox">&#10004;</span>-->
-                        <p class="contacts-form-text-data">Нажимая кнопку «Отправить», я принимаю соглашение сайта <a class="contacts-form-textLine" href="#">об обработке персональных данных.</a></p>
-                    </div>
-                </div>
-
-                <button class="contacts-form-btn">
-                    <img class="contacts-form-img" src="@img/icons/icons.svg#pencil" alt="shape"/>
-                    Отправить
-                </button>
-
-                <div class="contacts-form-secure">
-                    <img class="form-secure-img" src="@img/icons/icons.svg#checkmark" alt="shape1"/>
-                    <span class="form-secure-text">Мы гарантируем безопасность введенных данных. Они используются только для связи с клиентом и не хранятся на наших серверах</span>
-                </div>
-            </div>
-        </div>
+        @@include('html/contacts/contacts-fourth-screen.html',{})
 
         <div class="tablet">
             @@include('html/home/prefooter.html',{})
